# spark

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
assets/: generate_icons.py  generate_installer_assets.py  generate_splash.py
assets/installer/: dmg-background.tiff
assets/macos/: Info.plist  entitlements.plist  launcher.sh
assets/windows/: launcher.vbs
docs/: api-reference.md  architecture.md  auto-update.md  autonomous-actions.md  configuration.md  conversations.md  development.md  getting-started.md  index.md  mcp-integration.md  memory.md  providers.md  security.md  tools.md  voice.md  web-search.md  windows-code-signing.md
src/spark/: __init__.py  _version.txt  launch.py
src/spark/core/: agent_executor.py  application.py  context_compaction.py  conversation_manager.py  updater.py  user_guid.py
src/spark/daemon/: __init__.py  app.py  manager.py  tray.py
src/spark/database/: __init__.py  agents.py  autonomous_actions.py  backends.py  connection.py  context_index.py  conversation_links.py  conversations.py  files.py  mcp_ops.py  memories.py  messages.py  schema.py  tool_permissions.py  usage.py
src/spark/index/: __init__.py  embeddings.py  memory_index.py  vector_index.py
src/spark/llm/: __init__.py  anthropic_direct.py  base.py  bedrock.py  context_limits.py  google_gemini.py  manager.py  ollama.py  xai.py
src/spark/mcp_integration/: __init__.py  manager.py  tool_selector.py
src/spark/resources/: config.yaml.template
src/spark/resources/tool_docs/: _index.md  _template.md  create_excel.md  create_pdf.md  create_powerpoint.md  create_word.md  delete_memory.md  extract_archive.md  find_in_file.md  get_current_datetime.md  get_directory_tree.md  get_file_info.md  get_tool_documentation.md  list_archive.md  list_directory.md  list_memories.md  list_provider_models.md  query_memory.md  read_excel.md  read_file.md  read_pdf.md  read_powerpoint.md  read_word.md  run_command.md  search_files.md  spawn_agent.md  store_memory.md  web_fetch.md  web_search.md  write_file.md
src/spark/safety/: __init__.py  inspector.py  patterns.py
src/spark/scheduler/: __init__.py  creation_tools.py  executor.py  runner.py
src/spark/tools/: __init__.py  archives.py  datetime_tool.py  document_creation.py  documents.py  email_tool.py  filesystem.py  memory_tools.py  registry.py  system_command.py  web.py
src/spark/web/: auth.py  server.py  session.py  ssl_utils.py
src/spark/web/endpoints/: __init__.py  actions.py  auth.py  chat.py  conversations.py  help.py  main_menu.py  mcp_servers.py  memories.py  provider_guides.py  settings.py  streaming.py
src/spark/web/static/css/: base.css  cognisn.css  spark.css
src/spark/web/static/js/: chat.js  main.js  sse-client.js  ui.js
src/spark/web/templates/: actions.html  base.html  chat.html  conversations.html  help.html  loading.html  login.html  main_menu.html  memories.html  provider_guide.html  settings.html  welcome.html
tests/: test_agent_executor.py  test_agents_db.py  test_application.py  test_auth.py  test_chat_endpoints.py  test_comprehensive.py  test_conversation_links.py  test_conversation_manager.py  test_daemon.py  test_database.py  test_index.py  test_llm.py  test_main_menu.py  test_mcp.py  test_new_endpoints.py  test_safety.py  test_server.py  test_session.py  test_settings_helpers.py  test_system_command.py  test_tools.py  test_version.py
